<resources>
    <string name="map_api_key">AIzaSyASjjkQZ3dvnZxuFBOUKaGWP21ysuOS_oc</string>
    <string name="app_name">SommyKhris19</string>
    <string name="chisom">Chisom</string>
    <string name="chris">Chris</string>
    <string name="somykris2019">SomyKris\'19</string>
    <string name="wedding_program">Reception Program  >></string>
    <string name="photos">Marriage Photos  >></string>
    <string name="wedding_locations">Wedding Locations  >></string>
    <string name="cast_and_crew">Cast And Crew  >></string>
    <string name="bridal_train">Bridal Train  >></string>
    <string name="appreciation">Appreciation  >></string>
    <string name="developer">Developers  >></string>
    <string name="ongoing">On Going</string>
    <string name="chisom_weds_christain">Chisom weds Christian</string>
    <string name="wedding_photos">Marriage Photos</string>
    <string name="pre_wedding">Pre-Wedding</string>
    <string name="view_all">view all >></string>
    <string name="wedding_locations_title">Wedding Locations</string>
    <string name="church_address">Church Address</string>
    <string name="see_address"><![CDATA[see address >>]]></string>
    <string name="reception_address">Reception Address</string>
    <string name="bridal_train_title">Bridal Train</string>
    <string name="copywrite">ECR Couple 2019</string>
    <string name="nkechi_nwogu">Nkechi Nwogu</string>
    <string name="see_all"><![CDATA[see all >>]]></string>
    <string name="see_more"><![CDATA[see more >>]]></string>
    <string name="wedding_program_title">Wedding Program</string>
    <string name="reception_program">Reception Program</string>
    <string name="rprogram1">1. Recognition of guests by the MC</string>
    <string name="rprogram2">2. Arrival of the Couple</string>
    <string name="rprogram3">3. Opening Prayer</string>
    <string name="rprogram4">4. Chairman\'s opening remarks</string>
    <string name="rprogram5">5. Presentation and breaking of kolanut</string>
    <string name="rprogram6">6. Cutting of cake</string>
    <string name="rprogram7">7. Toast of the bride and</string>
    <string name="rprogram8">8. Bridegroom</string>
    <string name="rprogram9">9. Bridal dance</string>
    <string name="rprogram10">10. Couple special dance by Danny Sax</string>
    <string name="rprogram11">11. Refreshment \/ Music</string>
    <string name="rprogram12">12. Presentation of gift</string>
    <string name="rprogram13">13. Vote of thanks</string>
    <string name="rprogram14">14. Close remark \/ Closing prayer</string>
    <string name="locations">Locations</string>
    <string name="title_activity_maps">Map</string>
    <string name="address_church">Address: Christian Pentecostal Mission, along House of Assembly Secretariat Rd, Umuahia.</string>
    <string name="church_city">City: Umuahia</string>
    <string name="church_state">State: Abia</string>
    <string name="church_country">Country: Nigeria</string>
    <string name="address_reception">Address: Umuahia North Local Government MultiPurpose Hall.</string>
    <string name="be_our_guest">Be Our Guest</string>
    <string name="guest_text">Chisom Eze &amp; Christian Onyeukwu
Are getting married on Sarturday, 3rd August 2019.\n\nWe would like to express our many thanks for sharing our weeding day with us. Thank you for celebrating in our joy, love and happiness. We sincerely appreciate your well wishes &amp; thoughtful gift. Thank you!
        \n\nMr. &amp; Mrs C.N Onyeukwu.</string>
    <string name="order_of_photograph">Order Of Photograph >></string>
    <string name="order_of_photograph_title">Order Of Photograph</string>
    <string name="oop1">1. Couple with officiating ministers</string>
    <string name="oop2">2. Couple alone with choir</string>
    <string name="oop3">3. Bride alone</string>
    <string name="oop4">4. Groom alone</string>
    <string name="oop5">5. Bride with maid of honours</string>
    <string name="oop6">6. Groom man</string>
    <string name="oop7">7. Couple with made of honours and best man</string>
    <string name="oop8">8. Couple with bridal train</string>
    <string name="oop9">9. Couple with bride\’s parents</string>
    <string name="oop10">10. Couple with groom’s parents</string>
    <string name="oop11">11. Couple with bride’s family</string>
    <string name="oop12">12. Couple with Groom’s family</string>
    <string name="oop13">13. Couple with both families</string>
    <string name="oop14">14. Couple with both parents</string>
    <string name="oop15">15. Couple with Amike (Orlu People)</string>
    <string name="oop16">16. Couple with Mbeke (Mbano people)</string>
    <string name="oop17">17. Couple with First Bank staff</string>
    <string name="oop18">18. Couple with Greater Glory Campus Fellowship</string>
    <string name="oop19">19. Couple with Banking and finance Students(NABAFS) Alumni</string>
    <string name="oop20">20. Couple with ECR staff</string>
    <string name="oop21">21. Couple with Church members</string>
    <string name="oop22">22. Couple with friends and well wishers</string>
    <string name="oop23">23. Couple with men on suit</string>
    <string name="oop24">24. Couple with NACOS Alumni</string>
    <string name="oop25">25. Couple with Google Developer Group</string>
    <string name="oop26">26. Couple with Bishop Shanahan College (BSC), Orlu Alumni</string>
    <string name="appreciation_title">Appreciation</string>
    <string name="appreciation_text"><![CDATA[To God be the glory, we give all exaltation for his divine grace. Thank you all for your moral & financial support towards the success of this occasion. We pray that God shall grant all of you journey mercies back to your destinations. We highly appreciate your efforts to share in our joy. Thanks]]></string>
    <string name="cast_and_crew_title">Cast And Crew</string>
    <string name="master_of_ceremony">Master Of Ceremony</string>
    <string name="mc_name">MC Happy Prince</string>
    <string name="mc_num">08034405962</string>
    <string name="make_up_artist">Makeup Artiste</string>
    <string name="ma_name">Evablazing Makeovers</string>
    <string name="ma_num">07033291015</string>
    <string name="photographer">Photographer</string>
    <string name="pg_name">DBen Studios</string>
    <string name="pg_num">08134646496</string>
    <string name="cokies_and_eateries">Cooks and Eateries</string>
    <string name="ce_name">Eby\'s Kitchen</string>
    <string name="ce_num">08033096968</string>
    <string name="cake_and_decoration"><![CDATA[Cakes & Decorations]]></string>
    <string name="cd_name">Lady B’s Events</string>
    <string name="cd_num">08162442670</string>
    <string name="disc_jockey">Disc Jockey</string>
    <string name="dj_name">DJ Young</string>
    <string name="dj_num">08034068422</string>
    <string name="saxophoniest">Saxophonist</string>
    <string name="sax_name">Danny Sax</string>
    <string name="sax_num">08093871232</string>
    <string name="marriage_photos">Marriage Photos</string>
    <string name="one_out_of">1/2</string>
    <string name="developers">Developers</string>
    <string name="developers_text">This app was developed by ECR Technology Services team of developers at road #5 75A  federal lowcost housing estate, umuahia for their colleague who is getting married.</string>
    <string name="contact_us">Contact Us</string>
    <string name="company_email">Info@ecr-ts.com</string>
    <string name="company_phone1">08062159230</string>
    <string name="company_phone2">08027240276</string>
    <string name="company_website">www.ecr-ts.com</string>

</resources>
