<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeddingProgramActivity">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_6sdp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_back_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order_of_photograph_title"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginLeft="@dimen/_20sdp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/opensans_light"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/order_of_photograph_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop14"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop17"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop18"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop19"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop20"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop21"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop22"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop23"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop25"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/oop26"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>