<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeddingProgramActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="@dimen/_6sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_back_button"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/wedding_program_title"
                    android:textSize="@dimen/_20ssp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/opensans_semibold"
                    android:layout_marginLeft="@dimen/_40sdp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/opensans_light"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/reception_program"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_light"
                android:textSize="@dimen/_16ssp"
                android:text="@string/rprogram14"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>