<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundWhite"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/ongoing"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <WebView
            android:id="@+id/currentActivityTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:text="@string/wedding_photos"
        />
        <TextView
            android:id="@+id/seeMoreMarriagePhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/colorSrcondary"
            android:textSize="@dimen/_16ssp"
            android:text="@string/see_more"
            />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/marriagePhotoList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:text="@string/bridal_train_title"
            />
        <TextView
            android:id="@+id/seeAllBridalTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/colorSrcondary"
            android:textSize="@dimen/_16ssp"
            android:text="@string/see_all"
            />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/bridalTrainList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copywrite"
        android:layout_gravity="center"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"/>

</LinearLayout>
